# imageSaver

./: .gitignore  Pipfile
concat_numpy/: pyproject.toml
concat_numpy/concat_numpy/: concat.py  testes.py  tests.ipynb
gravarVideo/: colect.py  gravar_video.py  salvar_frame.py
utils/: renomear_imagens.py  separar_imagens.py
