[tool.poetry]
name = "concat-numpy"
version = "0.1.0"
description = ""
authors = ["j.senra <judson.nascimento@aperam.com>"]
readme = "README.md"
packages = [{include = "concat_numpy"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20.2"
opencv-python = "^4.7.0.76"
moviepy = "^1.0"
ipykernel = "^6.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
